--- a/local_rmd_nbooks/m2_QC_pp_dblts_all.Rmd
+++ b/local_rmd_nbooks/m2_QC_pp_dblts_all.Rmd
@@ -135,8 +135,7 @@ all_msc_filt %>% map(., ~.x@meta.data %>% mutate(stage_c_ag = case_when(StagePre
 
 
 ```{r}
-# all_msc_filt <- readRDS("data/processed/Pf/all_msc_filt.RDS")
-# all_msc_anotd <- readRDS("data/processed/Pf/all_msc_anotd.RDS")
+# Read strain info
 soupo_kselect_list_pp <- readRDS("data/processed/Pf/soupo_kselect_list_pp.RDS")
 ```
 
@@ -147,8 +146,13 @@ soupo_kselect_list_pp <- readRDS("data/processed/Pf/soupo_kselect_list_pp.RDS")
 !!!NB - FARM CODE - DONT DELETE
 ```{r, eval=T}
 ## Run Soupx in farm
-gogo()
-# nextflow run submsn_soupx.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/soupx.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/seu_obj/filt_seu_norm.RDS" --input_raw_mtx "/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/cellranger_runs/Pf/5736STDY*/outs/raw_feature_bc_matrix.h5" --o_file_name "soupx_filt_seu_norm.RDS" --hvg 500
+#gogo()
+
+## Remove the output files before rerunning since some object it might fail and old object persists
+#map(names(all_msc_filt), ~system(paste0('rm data/processed/Pf/', .x,'/seu_obj/soupx_filt_seu_norm.RDS')))
+
+
+# nextflow run submsn_soupx.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/soupx.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/seu_obj/filt_seu_norm.RDS" --input_raw_mtx "/lustre/scratch126/tol/teams/lawniczak/projects/malaria_single_cell/mali_field_runs/2022/data/cellranger_runs/Pf/5736STDY*/outs/raw_feature_bc_matrix.h5" --o_file_name "soupx_filt_seu_norm.RDS" --hvg 500 -resume
 ```
 
 
@@ -156,13 +160,58 @@ Read in soupx objects processed in farm
 FARM CODE
 ```{r, message=F, warning=F}
 ##Read BPcells matrices
-all_msc_nosct_supx_4_dblt <- list.files("data/processed/", pattern = "soupx_filt_seu_norm.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
-  set_names(nm = (str_remove_all(.,'data/processed//Pf/|/seu_obj.*'))) %>% 
+all_msc_nosct_supx_4_dblt_objs <- list.files("data/processed/Pf", pattern = "soupx_filt_seu_norm.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
+  set_names(nm = (str_remove_all(.,'data/processed/Pf/|/seu_obj.*'))) %>% 
   # .[sample_name] %>%
   map(readRDS)
 ```
 
+```{r, message=F, warning=F}
+##Read BPcells matrices
+all_msc_nosct_supx_4_dblt <- map(all_msc_nosct_supx_4_dblt_objs, ~.x[[1]])
+```
 
+Plot of soup estimated proportion
+```{r, message=F, warning=F}
+##Read BPcells matrices
+all_msc_nosct_supx_4_dblt_mdata <- map(all_msc_nosct_supx_4_dblt_objs, ~.x[[2]])
+
+all_msc_nosct_supx_4_dblt_mdata %>% 
+  bind_rows(.id = "donor") %>%
+  rownames_to_column('bcode') %>%
+  select(donor, rho) %>%
+  distinct(rho, .keep_all = T) %>%
+  ggplot(aes(x = donor, y = rho)) +
+  geom_point() +
+  # geom_line(aes(group = 1)) +
+  theme_classic() +
+  theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust = 1))
+
+```
+
+```{r, message=F, warning=F}
+##Read BPcells matrices
+rm(all_msc_nosct_supx_4_dblt_objs)
+```
+
+```{r, message=F, warning=F}
+##Read BPcells matrices
+supx_png <- list.files("data/processed/Pf", pattern = "rho_plt.png$", full.names = T, recursive = T, include.dirs = T) %>% 
+  set_names(nm = (str_remove_all(.,'data/processed/Pf/|/seu_obj.*'))) %>% 
+  map(readPNG)
+
+imap(supx_png, ~{
+  plot(1:2, type='n', xlab="", ylab="", axes=FALSE, main = .y)
+  rasterImage(.x, 1, 1, 2, 2)
+  })
+```
+
+```{r, message=F, warning=F}
+##Read BPcells matrices
+# all_msc_nosct_supx_4_dblt[["MSC68"]]
+```
+
+Check those that failed soupx automatic detection of soup contaminating fraction due to an issue with marker genes
 ```{r , eval=T}
 failed_supx <- all_msc_nosct_supx_4_dblt %>% 
   .[sample_name] %>%
@@ -170,27 +219,27 @@ failed_supx <- all_msc_nosct_supx_4_dblt %>%
   is.na(.) %>%
   sample_name[.]
 
+failed_supx
 ```
 
 Replace with unadjusted object if soupx not successful
+
 ```{r ,include=FALSE, message=FALSE, warning=FALSE}
-
-
-# str_detect(all_msc_nosct_supx_4_dblt[failed_supx], "No plausible marker genes")
-
-# all_msc_nosct_supx_4_dblt[failed_supx] <- all_msc_filt[failed_supx]
-# DefaultAssay(all_msc_nosct_supx_4_dblt[[failed_supx]]) <- "RNA"
-# all_msc_nosct_supx_4_dblt[failed_supx[1]] <- CreateSeuratObject(counts = all_msc_filt[[failed_supx[1]]][["RNA"]]$counts, meta.data = all_msc_filt[[failed_supx[1]]]@meta.data) %>% seurat_norm_stand(., hvg = 500) %>% list()
-# all_msc_nosct_supx_4_dblt[failed_supx[2]] <- CreateSeuratObject(counts = all_msc_filt[[failed_supx[2]]][["RNA"]]$counts, meta.data = all_msc_filt[[failed_supx[2]]]@meta.data) %>% seurat_norm_stand(., hvg = 500) %>% list()
+# ##
+# for (i in 1:length(failed_supx)) {
+# 
+#   print(failed_supx[i])
+#   all_msc_nosct_supx_4_dblt[failed_supx[i]] <- CreateSeuratObject(counts = all_msc_filt[[failed_supx[i]]][["RNA"]]$counts, meta.data = all_msc_filt[[failed_supx[i]]]@meta.data) %>% NormalizeData(., verbose = F) %>% FindVariableFeatures(., nfeatures = 500, verbose = T) %>% ScaleData(., verbose = F) %>% RunPCA(., verbose = T) %>% list()
+# 
+# }
 # all_msc_nosct_supx_4_dblt <- all_msc_nosct_supx_4_dblt %>% .[sample_name]
-
 ```
-
 
 ```{r ,include=FALSE, message=FALSE, warning=FALSE}
 ##
 for (i in 1:length(failed_supx)) {
 
+  print(failed_supx[i])
   all_msc_nosct_supx_4_dblt[failed_supx[i]] <- CreateSeuratObject(counts = all_msc_filt[[failed_supx[i]]][["RNA"]]$counts, meta.data = all_msc_filt[[failed_supx[i]]]@meta.data) %>% seurat_norm_stand(., hvg = 500) %>% list()
 
 }
@@ -223,15 +272,15 @@ imap(all_msc_nosct_supx_4_dblt, ~saveRDS(.x, paste0("data/processed/Pf/",.y,"/se
 
 !!!NB - FARM CODE - DONT DELETE
 ```{r, eval=T}
-gogo()
+#gogo()
 ## Run SNORM on farm like below
-# nextflow run submsn_seu_norm.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_stdnorm.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/seu_obj/filt_seu_supx.RDS" --o_file_name "filt_seu_norm_supx.RDS" --umap_name "UMAP_F_S_NORM" --hvg 500 --cluster_resoln 0.1 --cl_nm "seurat_clusters_supx" --umap_redctn_nm "umap.f.s.norm" --redctn "pca" --integrtd_pc30 "no" --elbo_nm "filt_seu_norm_supx_elbo.RDS" --resume
+# nextflow run submsn_seu_norm.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_stdnorm.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/seu_obj/filt_seu_supx.RDS" --o_file_name "filt_seu_norm_supx.RDS" --umap_name "UMAP_F_S_NORM" --hvg 500 --cluster_resoln 0.1 --cl_nm "seurat_clusters_supx" --umap_redctn_nm "umap.f.s.norm" --redctn "pca" --integrtd_pc30 "no" --elbo_nm "filt_seu_norm_supx_elbo.RDS" --findpc_mthd "perpendicular line" --resume
 ```
 
 
 ```{r}
-filt_seu_norm_supx_elbo <-  list.files("data/processed/", pattern = "^filt_seu_norm_supx_elbo.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
-  set_names(nm = (str_remove_all(.,'data/processed//Pf/|/seu_obj.*'))) %>% 
+filt_seu_norm_supx_elbo <-  list.files("data/processed/Pf", pattern = "^filt_seu_norm_supx_elbo.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
+  set_names(nm = (str_remove_all(.,'data/processed/Pf/|/seu_obj.*'))) %>% 
   .[sample_name] %>%
   map(readRDS)
 
@@ -242,8 +291,8 @@ imap(filt_seu_norm_supx_elbo, ~.x + labs(title = .y))
 Read in seurat objects processed in farm
 ```{r, message=F, warning=F}
 ##Read BPcells matrices
-all_msc_nosct_supx_4_dblt <- list.files("data/processed/", pattern = "^filt_seu_norm_supx.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
-  set_names(nm = (str_remove_all(.,'data/processed//Pf/|/seu_obj.*'))) %>% 
+all_msc_nosct_supx_4_dblt <- list.files("data/processed/Pf", pattern = "^filt_seu_norm_supx.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
+  set_names(nm = (str_remove_all(.,'data/processed/Pf/|/seu_obj.*'))) %>% 
   .[sample_name] %>%
   map(readRDS)
 ```
@@ -314,7 +363,7 @@ all_msc_filt %>% map(., ~.x@meta.data %>% count(StagePrelim, StagePrelimC))
 
 !!!NB - FARM CODE - DONT DELETE
 ```{r, eval=T}
-gogogo()
+#gogogo()
 ## Run sdblfinder on farm
 # nextflow run doubletF.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/scdblfindr.R" --filt_obj "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/seu_obj/filt_seu_norm.RDS" --spx_obj "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/seu_obj/filt_seu_norm_supx.RDS" --o_file_name "scdblf_outs.RDS" --resume
 ```
@@ -322,8 +371,8 @@ gogogo()
 Read in seurat objects processed in farm
 ```{r, message=F, warning=F}
 ##Read BPcells matrices
-scf_outputs <- list.files("data/processed/", pattern = "^scdblf_outs.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
-  set_names(nm = (str_remove_all(.,'data/processed//Pf/|/seu_obj.*'))) %>% 
+scf_outputs <- list.files("data/processed/Pf", pattern = "^scdblf_outs.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
+  set_names(nm = (str_remove_all(.,'data/processed/Pf/|/seu_obj.*'))) %>% 
   .[sample_name] %>%
   map(readRDS)
 ```
@@ -401,18 +450,31 @@ plot_ly(data = as.data.frame(all_msc_w_dblts[[4]]@reductions[["umap"]]@cell.embe
 ##### doublet score and seurat clusters UMAP
 doublet score UMAP plus grouping by seurat clusters to see if some clusters are predominantly doublets
 
+
 ```{r, results='asis'}
-all_msc_w_dblts  %>% 
-  imap(.,~{
-    FeaturePlot(.x, features = 'scf_score_norm', pt.size = 0.2)
-    DimPlot(.x, group.by = 'seurat_clusters', label = T)
-    
-    #DimPlot(.x, group.by = 'StagePrelimC', label = T)
-    
-  })
+all_msc_w_dblts <- map(all_msc_w_dblts, ~FindClusters(.x, resolution = 0.8))
 
 ```
 
+```{r, results='asis'}
+all_msc_w_dblts  %>% imap(.,~{
+    DimPlot(.x, group.by = 'seurat_clusters', label = T)
+    })
+
+```
+
+```{r, results='asis'}
+all_msc_w_dblts  %>%   imap(.,~{
+    FeaturePlot(.x, features = 'scf_score_norm', pt.size = 0.2)
+  })
+
+```
+```{r, results='asis'}
+all_msc_w_dblts  %>%   imap(.,~{
+    FeaturePlot(.x, features = 'scf_score_norm', pt.size = 0.2, reduction = "pca")
+  })
+
+```
 
 
 ##### MSC14 doublet scores
@@ -452,6 +514,7 @@ dbr = map(all_msc_filt, ~(ncol(.)/1000)*0.008)
 
 
 ```{r}
+library(Matrix)
 write(names(counts_msc), file = "data/processed/Pf/don_nms.txt")
 
 imap(counts_msc, ~writeMM(.x, paste0("data/processed/Pf/", .y ,"/seu_obj/counts_msc.mtx")))
@@ -460,71 +523,6 @@ imap(genes_msc, ~write(.x, paste0("data/processed/Pf/", .y ,"/seu_obj/genes_msc.
 # dbr = map(all_msc_filt, ~(ncol(.)/1000)*0.008)
 ```
 
-```{r}
-## Remove names from the objects as it seems to give the error AttributeError: 'str' object has no attribute 'T'
-
-names(counts_msc) <- NULL
-names(genes_msc) <- NULL
-names(dbr) <- NULL
-```
-
-### Scrublet
-
-#### Estimate doublets using Scrublet
-```{python}
-# Consider doing that in a jupyter notebook or as script, if you have dependency issues in R
-
-# Load required modules
-import scrublet as scr
-import scipy.io
-import matplotlib.pyplot as plt
-import numpy as np
-
-db_scores_ls = []
-prd_db_ls = []
-
-for mat, gns, dbr in zip(r.counts_msc, r.genes_msc, r.dbr):
-  counts_matrix = mat.T.tocsc()
-  
-  # Calculate number of counts and genes per cell
-  nCount = np.sum(counts_matrix, axis = 1)
-  nFeature = np.sum(counts_matrix > 0, axis = 1)
-  
-  # Load gene names
-  genes = gns
-  # Output shape
-  print('Counts matrix shape: {} rows, {} columns'.format(counts_matrix.shape[0], counts_matrix.shape[1]))
-  print('Number of genes in gene list: {}'.format(len(genes)))
-  print('Number of genes in gene list: {}'.format(dbr))
-  
-  # Since the algorithm is robust to the expected doublet rate we will not search extensively for the best fit here
-  scrub = scr.Scrublet(counts_matrix, expected_doublet_rate=dbr)
-  
-  # Run scrublet
-  doublet_scores, predicted_doublets = scrub.scrub_doublets(min_counts=2,
-  min_cells=3,
-  min_gene_variability_pctl=90,
-  n_prin_comps=30,
-  log_transform=True,
-  mean_center=True,
-  normalize_variance=True,
-  synthetic_doublet_umi_subsampling = 1,
-  verbose=False
-  )
-  
-  
-  db_scores_ls.append(doublet_scores)
-  
-  prd_db_ls.append(predicted_doublets)
-  
-  
-```
-  
-```{r}
-
-print('EOF python')
-
-```
 
 
 ```{r}
@@ -535,7 +533,7 @@ rm(genes_msc)
 ```
 
 ```{r}
-gogo()
+#gogo()
 ## Run this script in farm
 # python scrblt.py 
 # python /lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/mali22_code/python_nbooks
@@ -546,15 +544,21 @@ gogo()
 scrb_doublet_scores <- list.files("data/processed/Pf", pattern = "doublet_scores.csv$", full.names = T, recursive = T, include.dirs = T) %>% 
   set_names(nm = (str_remove_all(.,'data/processed/Pf/|/seu_obj.*'))) %>% 
   .[sample_name] %>%
-  map(read_csv)
+  map(., ~read.csv(., header = F) %>% t() %>% .[,1] %>% as.vector)
 ```
 
 ```{r}
 ## Read scrublet output
-predicted_doublets_scores <- list.files("data/processed/Pf", pattern = "predicted_doublets.csv$", full.names = T, recursive = T, include.dirs = T) %>% 
+predicted_doublets <- list.files("data/processed/Pf", pattern = "predicted_doublets.csv$", full.names = T, recursive = T, include.dirs = T) %>% 
   set_names(nm = (str_remove_all(.,'data/processed/Pf/|/seu_obj.*'))) %>% 
   .[sample_name] %>%
-  map(read_csv)
+  map(., ~read.csv(., header = F) %>% t() %>% .[,1] %>% as.vector)
+```
+
+
+```{r}
+
+scrublet_o <- pmap(list(all_msc_w_dblts, scrb_doublet_scores, predicted_doublets), ~data.frame('bcode'= colnames(..1), 'scrub_scores'=..2, 'scrub_doublet'=..3))
 ```
 
 Visualize scrublet scores
@@ -590,9 +594,10 @@ imap(scrb_umap_png, ~{
 all_msc_w_dblts <- list(scrublet_o, all_msc_w_dblts) %>%
   pmap(~ ..1 %>% 
          dplyr::select(bcode, scrub_doublet) %>%
-         mutate(scrub_doublet = case_when(scrub_doublet == T ~ "Doublet", scrub_doublet == F ~ "Singlet")) %>%
+         mutate(scrub_doublet = case_when(scrub_doublet == "True" ~ "Doublet", scrub_doublet == "False" ~ "Singlet")) %>%
          column_to_rownames('bcode') %>%
          AddMetaData(..2, .))
+
 
 ```
 
@@ -1000,38 +1005,38 @@ map(all_msc_w_dblts, ~.x@meta.data %>% dplyr::count(strain_gt, scf_class_norm) %
 ```{r}
 # dbt_methods <- c("scf_class", "scrub_doublet", "scf_class_norm")
 # dbt_methods <- c(paste0(c("scf_class"), c("_norm", "_rand")), paste0(c("scf_class_norm"), rep(c("_norm", "_sct"))), "scrub_doublet")
-dbt_methods <- c(paste0(c("scf_class"), c("_norm", "_rand")), paste0(c("scf_class"), c("_supx_norm", "_supx_rand")), "scrub_doublet")
+dbt_methods_stg <- c(paste0(c("scf_class"), c("_norm", "_rand")), paste0(c("scf_class"), c("_supx_norm", "_supx_rand")), "scrub_doublet")
 
 
-dbt_sens_speci <-map2(all_msc_w_dblts, rep(list(dbt_methods), length(all_msc_w_dblts)), ~{
+dbt_sens_speci <-map2(all_msc_w_dblts, rep(list(dbt_methods_stg), length(all_msc_w_dblts)), ~{
   dblt_calls <- .x@meta.data %>% 
-    dplyr::select(hetero_dblts, dbt_methods) %>% 
+    dplyr::select(hetero_dblts, dbt_methods_stg) %>% 
     mutate(across(everything(), ~factor(., levels = c("Singlet", "Doublet")))) 
   # a=.y
-  map(dbt_methods, ~list("Sensitivity" = sensitivity(data = dblt_calls[,.x], reference = dblt_calls[,"hetero_dblts"]), "Specificity" = specificity(data = dblt_calls[,.x], reference = dblt_calls[,"hetero_dblts"]))) %>%
-    set_names(dbt_methods) %>% as.data.frame()
+  map(dbt_methods_stg, ~list("Sensitivity" = sensitivity(data = dblt_calls[,.x], reference = dblt_calls[,"hetero_dblts"]), "Specificity" = specificity(data = dblt_calls[,.x], reference = dblt_calls[,"hetero_dblts"]))) %>%
+    set_names(dbt_methods_stg) %>% as.data.frame()
   }) %>% bind_rows(., .id = "donor")
 
 ```
 
 
 ```{r}
-# # dbt_methods <- c("scf_class_norm", "scrub_doublet", "scf_class_norm")
-# dbt_methods <- c(paste0(c("scf_class_norm", "scf_class_norm"), rep(c("_norm", "_rand"), each=2)), "scrub_doublet")
+# # dbt_methods_stg <- c("scf_class_norm", "scrub_doublet", "scf_class_norm")
+# dbt_methods_stg <- c(paste0(c("scf_class_norm", "scf_class_norm"), rep(c("_norm", "_rand"), each=2)), "scrub_doublet")
 # 
-# dbt_sens_speci <-map2(all_msc_w_dblts, rep(list(dbt_methods), length(all_msc_w_dblts)), ~{
+# dbt_sens_speci <-map2(all_msc_w_dblts, rep(list(dbt_methods_stg), length(all_msc_w_dblts)), ~{
 #   dblt_calls <- .x@meta.data %>% 
-#     dplyr::select(strain_gt, dbt_methods) %>% 
+#     dplyr::select(strain_gt, dbt_methods_stg) %>% 
 #     mutate(across(everything(), ~factor(., levels = c("Singlet", "Doublet")))) 
 #   # a=.y
-#   map(dbt_methods, ~list("Sensitivity" = sensitivity(data = dblt_calls[,.x], reference = dblt_calls[,"strain_gt"]), "Specificity" = specificity(data = dblt_calls[,.x], reference = dblt_calls[,"strain_gt"]))) %>%
-#     set_names(dbt_methods) %>% as.data.frame()
+#   map(dbt_methods_stg, ~list("Sensitivity" = sensitivity(data = dblt_calls[,.x], reference = dblt_calls[,"strain_gt"]), "Specificity" = specificity(data = dblt_calls[,.x], reference = dblt_calls[,"strain_gt"]))) %>%
+#     set_names(dbt_methods_stg) %>% as.data.frame()
 #   }) %>% bind_rows(., .id = "donor")
 
 ```
 
 ```{r}
-dblt_calls <- all_msc_w_dblts[[1]]@meta.data %>% dplyr::select(strain_gt, dbt_methods) %>% mutate(across(everything(), ~factor(., levels = c("Singlet", "Doublet")))) 
+dblt_calls <- all_msc_w_dblts[[1]]@meta.data %>% dplyr::select(strain_gt, dbt_methods_stg) %>% mutate(across(everything(), ~factor(., levels = c("Singlet", "Doublet")))) 
 
 sensitivity(reference = dblt_calls[,"strain_gt"], data = dblt_calls[,"scf_class_norm"])
 
@@ -1058,7 +1063,8 @@ dbt_sens_speci %>% pivot_longer(cols = -c(donor), names_pattern = "(.*)\\.(S.*)"
 #### Add doublet assignment to raw seurat object to visualize all the cells that are filter out
 ```{r}
 
-mt_filt <- rep(0.4, length(all_msc_w_dblts))
+# mt_filt <- rep(0.4, length(all_msc_w_dblts))
+mt_filt <- unlist(map(all_msc_w_dblts, ~quantile(.x@meta.data[, "percent.mt"], 0.995, na.rm = T)))
 ```
 
 ## Visualize doublets and other QC classes
@@ -1146,7 +1152,7 @@ return(list(cell_qc_filt_obj, cell_qc_plot))
 ```{r, results='asis',  fig.width = 8, fig.height = 4}
 ##adding clusters that are used to display mitochondrial count
 
-imap(cell_qc_objs, ~.x[2]+ labs(title = .y))
+imap(cell_qc_objs, ~.x[[2]]+ labs(title = .y))
 ```
 
 
@@ -1245,22 +1251,17 @@ list(map(cell_qc_objs, ~.x[[1]][,.x[[1]]@meta.data$QC_reason %in% c('pass')]), m
 
 #### Tabulate  doublets
 ```{r}
-##Seurat object
-
-##!! WILL NEED TO BE UNDONE - RETAIN MSC14 ONLY WHOSE POSITION HAS CHANGED FROM 4 TO 1
-# all_msc_filt_w_dblts[[4]] : all_msc_filt_w_dblts[[4]]
 map(all_msc_w_dblts, ~.x@meta.data %>% dplyr::count(scf_class_rand, scf_class_norm))
-map(all_msc_w_dblts, ~.x@meta.data %>% dplyr::count(strain_gt, scf_class_norm, scrub_doublet))
+```
 
-# map(all_msc_w_dblts, ~.x@meta.data %>% 
-#   dplyr::count(seurat_clusters_dblt, scf_class_norm) %>%
-#   mutate(freq = round(n / sum(n), 3))) 
+```{r}
+map(all_msc_w_dblts, ~.x@meta.data %>% dplyr::count(strain_gt, scf_class_norm, scrub_doublet))
 ```
 
 ```{r}
 
-##Remove souporcell doublet
-saveRDS(all_msc_w_dblts, "data/processed/Pf/all_msc_w_dblts.RDS")
+## save file with doublet info
+saveRDS(all_msc_w_dblts, "data/processed/Pf/m2_all/all_msc_w_dblts.RDS")
 
 ```
 
@@ -1276,7 +1277,7 @@ saveRDS(all_msc_w_dblts, "data/processed/Pf/all_msc_w_dblts.RDS")
 ```{r}
 
 ## Write out file with doublets for sk25
-saveRDS(all_msc_w_dblts[c("MSC33", "MSC57")] %>% lapply(., function(x) x@meta.data), "data/processed/Pf/all_msc_w_dblts_m33_m57.RDS")
+saveRDS(all_msc_w_dblts[c("MSC33", "MSC57")] %>% lapply(., function(x) x@meta.data), "data/processed/Pf/m2_all/all_msc_w_dblts_m33_m57.RDS")
 
 ```
 
@@ -1284,8 +1285,13 @@ saveRDS(all_msc_w_dblts[c("MSC33", "MSC57")] %>% lapply(., function(x) x@meta.da
 ```{r}
 
 ## Write out metadata
-saveRDS(all_msc_w_dblts %>% lapply(., function(x) x@meta.data), "data/processed/Pf/all_msc_w_dblts_mdata.RDS")
+# saveRDS(all_msc_w_dblts %>% lapply(., function(x) x@meta.data), "data/processed/Pf/m2_all/all_msc_w_dblts_mdata.RDS")
 
+```
+
+
+```{r}
+map(all_msc_w_dblts, ~.x@meta.data %>% dplyr::count(strain_gt))
 ```
 
 #### Remove doublets
@@ -1293,7 +1299,7 @@ saveRDS(all_msc_w_dblts %>% lapply(., function(x) x@meta.data), "data/processed/
 ```{r}
 
 ##Remove souporcell doublet
-all_msc_filt_no_dblts <- all_msc_w_dblts %>%
+all_msc_filt_no_strainDblts <- all_msc_w_dblts %>%
   map(. %>% subset(., subset = strain_gt %in% c("Doublet"), invert = TRUE))
 
 ```
@@ -1302,13 +1308,13 @@ all_msc_filt_no_dblts <- all_msc_w_dblts %>%
 ```{r}
 ##Seurat object
 ##Remove cluster 7 with lots of doublets MSC14
-# subset(all_msc_filt_no_dblts[[4]], subset = seurat_clusters_dblt == "7") %>% .@meta.data %>% dplyr::count(scf_class_norm, scrub_doublet)
+# subset(all_msc_filt_no_strainDblts[[4]], subset = seurat_clusters_dblt == "7") %>% .@meta.data %>% dplyr::count(scf_class_norm, scrub_doublet)
 
 ##Remove cluster 8 with lots of doublets (0.205) MSC14 - losing 31 singlets
-# all_msc_filt_no_dblts[[4]] <- subset(all_msc_filt_no_dblts[[4]], subset = seurat_clusters_dblt != "7")
+# all_msc_filt_no_strainDblts[[4]] <- subset(all_msc_filt_no_strainDblts[[4]], subset = seurat_clusters_dblt != "7")
 
 ##Remove cluster 8 with lots of doublets (0.368) MSC14 - losing 12 singlets
-# all_msc_filt_no_dblts[[4]] <- subset(all_msc_filt_no_dblts[[4]], subset = seurat_clusters_dblt != "8")
+# all_msc_filt_no_strainDblts[[4]] <- subset(all_msc_filt_no_strainDblts[[4]], subset = seurat_clusters_dblt != "8")
 
 ```
 
@@ -1317,7 +1323,7 @@ all_msc_filt_no_dblts <- all_msc_w_dblts %>%
 ##Seurat object
 ##Remove doublets
 
-map(all_msc_filt_no_dblts, ~.x@meta.data %>% filter(scf_class_norm_dbt_prop > 0.1) %>% count(seurat_clusters, scf_class_norm_dbt_prop,scf_class_rand_dbt_prop, scrub_doublet_dbt_prop,   scf_class_norm_dbt_nums, scrub_doublet_dbt_nums))
+map(all_msc_filt_no_strainDblts, ~.x@meta.data %>% filter(scf_class_norm_dbt_prop > 0.1) %>% count(seurat_clusters, scf_class_norm_dbt_prop,scf_class_rand_dbt_prop, scrub_doublet_dbt_prop,   scf_class_norm_dbt_nums, scrub_doublet_dbt_nums))
 
 ```
 
@@ -1326,7 +1332,7 @@ map(all_msc_filt_no_dblts, ~.x@meta.data %>% filter(scf_class_norm_dbt_prop > 0.
 ##Seurat object
 ##Remove doublets
 
-map(all_msc_filt_no_dblts, ~.@meta.data %>% dplyr::count(scf_class_norm, scrub_doublet))
+map(all_msc_filt_no_strainDblts, ~.@meta.data %>% dplyr::count(scf_class_norm, scrub_doublet))
 
 ```
 ##### Check doublet clusters
@@ -1334,7 +1340,7 @@ map(all_msc_filt_no_dblts, ~.@meta.data %>% dplyr::count(scf_class_norm, scrub_d
 ##Seurat object
 ##Remove doublets
 
-map(all_msc_filt_no_dblts, ~.x@meta.data %>% count(scf_class_norm_dbt_prop > 0.1))
+map(all_msc_filt_no_strainDblts, ~.x@meta.data %>% count(scf_class_norm_dbt_prop > 0.1))
 
 ```
 
@@ -1343,7 +1349,7 @@ map(all_msc_filt_no_dblts, ~.x@meta.data %>% count(scf_class_norm_dbt_prop > 0.1
 ##Seurat object
 ##Remove doublets
 
-map(all_msc_filt_no_dblts, ~.x@meta.data %>% filter(!((scf_class_norm_dbt_prop > 0.1 & scf_class_rand_dbt_prop > 0.1) | scrub_doublet_dbt_prop > 0.1)) %>% rownames_to_column("bcode") %>% mutate(across(c(scf_class_norm_dbt_prop,scf_class_rand_dbt_prop, scrub_doublet_dbt_prop), ~round(., 2))) %>% count(seurat_clusters, scf_class_norm_dbt_prop,scf_class_rand_dbt_prop, scrub_doublet_dbt_prop))
+map(all_msc_filt_no_strainDblts, ~.x@meta.data %>% filter(!((scf_class_norm_dbt_prop > 0.1 & scf_class_rand_dbt_prop > 0.1) | scrub_doublet_dbt_prop > 0.1)) %>% rownames_to_column("bcode") %>% mutate(across(c(scf_class_norm_dbt_prop,scf_class_rand_dbt_prop, scrub_doublet_dbt_prop), ~round(., 2))) %>% count(seurat_clusters, scf_class_norm_dbt_prop,scf_class_rand_dbt_prop, scrub_doublet_dbt_prop))
 
 ```
 
@@ -1351,10 +1357,47 @@ map(all_msc_filt_no_dblts, ~.x@meta.data %>% filter(!((scf_class_norm_dbt_prop >
 ##Seurat object
 ##Remove doublets
 
-map(all_msc_filt_no_dblts, ~.x@meta.data %>% count(scf_class_norm_dbt_prop < 0.1 & scf_class_rand_dbt_prop < 0.1))
+map(all_msc_filt_no_strainDblts, ~.x@meta.data %>% filter(scf_class_norm == "Singlet") %>% count(scf_class_norm_dbt_prop < 0.20 & scf_class_rand_dbt_prop < 0.20))
 
 ```
 
+```{r}
+##Seurat object
+##Remove doublets
+
+map(all_msc_filt_no_strainDblts, ~.x@meta.data %>% filter(scf_class_norm == "Singlet" & scf_class_norm_dbt_prop < 0.20 & scf_class_rand_dbt_prop < 0.20) %>% count(scrub_doublet_dbt_prop < 0.40))
+
+```
+
+```{r}
+##Seurat object
+##Remove doublets
+
+map(all_msc_filt_no_strainDblts, ~.x@meta.data %>% filter(scf_class_norm == "Singlet" & scf_class_norm_dbt_prop < 0.20 & scf_class_rand_dbt_prop < 0.20) %>% count(scrub_doublet))
+
+```
+
+```{r}
+
+map(all_msc_filt_no_strainDblts, ~.x@meta.data %>% filter(scf_class_norm == "Singlet") %>% count(scf_class_norm_dbt_prop, scf_class_rand_dbt_prop) %>% filter(scf_class_norm_dbt_prop>0.2 ))
+
+```
+
+```{r, fig.width=18, fig.height=3}
+##Seurat object
+##Remove doublets
+
+imap(all_msc_filt_no_strainDblts["MSC50_SLO"], ~DimPlot(.x, group.by = c("scrub_doublet", "StagePrelim", "scrub_doublet_dbt_prop", "scf_class_norm_dbt_prop", "scf_class_rand_dbt_prop"), ncol = 5) + labs(title =.y))
+
+```
+
+```{r, fig.width=15, fig.height=4}
+##Seurat object
+##Remove doublets
+
+imap(all_msc_filt_no_strainDblts["MSC50_SLO"], ~DimPlot(.x, group.by = c("scrub_doublet", "StagePrelim", "scrub_doublet_dbt_prop", "scf_class_norm_dbt_prop"), reduction = "pca") + labs(title =.y))
+
+```
 ```{r, message=FALSE}
 # thogoo()
 ```
@@ -1365,7 +1408,7 @@ map(all_msc_filt_no_dblts, ~.x@meta.data %>% count(scf_class_norm_dbt_prop < 0.1
 ##Seurat object
 ##Remove doublets
 
-# all_msc_filt_no_dblts <- all_msc_filt_no_dblts %>%
+# all_msc_filt_no_strainDblts <- all_msc_filt_no_strainDblts %>%
 #     # map(. %>% subset(., subset = scf_class_norm == "Singlet" & scf_class_norm_dbt_prop < 0.1 & scf_class_rand_dbt_prop < 0.1))
 #     map(. %>% subset(., subset = scf_class_norm == "Singlet" & !((scf_class_norm_dbt_prop > 0.1 & scf_class_rand_dbt_prop > 0.1) | scrub_doublet_dbt_prop > 0.1)))
   # map(. %>% subset(., subset = scf_class_supx_rand == "Singlet" & scrub_doublet == 'Singlet'))
@@ -1374,20 +1417,59 @@ map(all_msc_filt_no_dblts, ~.x@meta.data %>% count(scf_class_norm_dbt_prop < 0.1
 
 ```{r}
 ##Seurat object
-##Remove doublets
+##Remove stage doublets
 
-all_msc_filt_no_dblts <- all_msc_filt_no_dblts %>%
+all_msc_filt_no_StgStrainDblts <- all_msc_filt_no_strainDblts %>%
     # map(. %>% subset(., subset = scf_class_norm == "Singlet" & scf_class_norm_dbt_prop < 0.1 & scf_class_rand_dbt_prop < 0.1)) %>%
     map(. %>% subset(., subset = scf_class_norm == "Singlet")) %>%
-    map(. %>% subset(., subset = scf_class_norm_dbt_prop < 0.1 | scf_class_rand_dbt_prop < 0.1)) %>%
-    map(. %>% subset(., subset = scrub_doublet_dbt_prop < 0.13)) ## !!NOTE - was 0.1 but MSC50_SLO has all clusters > 0.12
+    map(. %>% subset(., subset = scf_class_norm_dbt_prop < 0.20 & scf_class_rand_dbt_prop < 0.20)) #%>%
+    # map(. %>% subset(., subset = scf_class_norm_dbt_prop < 0.1 | scf_class_rand_dbt_prop < 0.1))# %>% original losing male of MSC50_SLO
+    #map(. %>% subset(., subset = scrub_doublet_dbt_prop < 0.13)) ## !!NOTE - was 0.1 but MSC50_SLO has all clusters > 0.12
   # map(. %>% subset(., subset = scf_class_supx_rand == "Singlet" & scrub_doublet == 'Singlet'))
+
+## Table of removal of stage doublets by scdblfinder
+map(all_msc_filt_no_strainDblts, dim) %>% as.data.frame() %>% .[2,] %>% bind_rows(., map(all_msc_filt_no_StgStrainDblts, dim) %>% as.data.frame() %>% .[2,]) %>% t()
+```
+
+```{r, fig.width=15, fig.height=4}
+##Seurat object
+##Remove doublets
+
+imap(all_msc_filt_no_StgStrainDblts["MSC50_SLO"], ~DimPlot(.x, group.by = c("scrub_doublet", "StagePrelim", "scrub_doublet_dbt_prop")) + labs(title =.y))
 
 ```
 
+```{r}
+##Seurat object
+##Remove doublets
+
+map(all_msc_filt_no_StgStrainDblts, ~.x@meta.data %>% count(scrub_doublet))
+
+```
+
+```{r}
+
+map(all_msc_filt_no_StgStrainDblts, ~.x@meta.data %>% count(scrub_doublet_dbt_prop, scf_class_norm_dbt_prop, scf_class_rand_dbt_prop) %>% filter(scrub_doublet_dbt_prop>0.2 ))
+
+```
+
+```{r}
+##Seurat object
+##Remove doublets
+
+all_msc_filt_no_StgStrainDblts <- all_msc_filt_no_StgStrainDblts %>%
+    map(. %>% subset(., subset = scrub_doublet == "Singlet")) %>%
+    map(. %>% subset(., subset = scrub_doublet_dbt_prop < 0.5))  ## !!NOTE - was 0.1 but MSC50_SLO has high number of doublets - maybe SLO lysed many gams and soup content high
+
+## Table of removal of stage doublets by scdblfinder
+map(all_msc_filt_no_strainDblts, dim) %>% as.data.frame() %>% .[2,] %>% bind_rows(., map(all_msc_filt_no_StgStrainDblts, dim) %>% as.data.frame() %>% .[2,]) %>% t()
+```
+
+
+
 ```{r, results='asis'}
 
-map(all_msc_filt_no_dblts, dim)
+map(all_msc_filt_no_StgStrainDblts, dim)
 
 ```
 
@@ -1416,8 +1498,8 @@ map(all_msc_w_dblts, ~{
 ```{r}
 ## Change the default assay
 
-for (i in names(all_msc_filt_no_dblts)) {
-  DefaultAssay(all_msc_filt_no_dblts[[i]]) <- "RNA"
+for (i in names(all_msc_filt_no_StgStrainDblts)) {
+  DefaultAssay(all_msc_filt_no_StgStrainDblts[[i]]) <- "RNA"
 }
 
 ```
@@ -1430,8 +1512,8 @@ for (i in 1:length(sample_name)) {
   
   ##Transfers
   ##souporcell genotyping files
-  saveRDS(all_msc_filt_no_dblts_sset[[sample_name[i]]],
-    paste0('data/processed/Pf/', sample_name[i], '/seu_obj/all_msc_filt_no_dblts_sset.RDS')
+  saveRDS(all_msc_filt_no_StgStrainDblts[[sample_name[i]]],
+    paste0('data/processed/Pf/', sample_name[i], '/seu_obj/all_msc_filt_no_StgStrainDblts.RDS')
     )
   
 }
@@ -1442,39 +1524,67 @@ for (i in 1:length(sample_name)) {
 ```{r, eval=T}
 gogo()
 ## Run SNORM on farm like below
-# nextflow run submsn_seu_norm.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_stdnorm.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/seu_obj/all_msc_filt_no_dblts_sset.RDS" --o_file_name "all_msc_filt_no_dblts.RDS" --umap_name "UMAP_" --hvg 500 --cluster_resoln 0.1 --cl_nm "seurat_clusters_nm" --umap_redctn_nm "umap" --redctn "pca" --integrtd_pc30 "no" --elbo_nm "all_msc_filt_no_dblts_elbo.RDS" --resume
+# nextflow run submsn_seu_norm.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_stdnorm.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/MSC*/seu_obj/all_msc_filt_no_StgStrainDblts.RDS" --o_file_name "msc_filt_no_dblts.RDS" --umap_name "UMAP_" --hvg 500 --cluster_resoln 0.1 --cl_nm "seurat_clusters_nm" --umap_redctn_nm "umap" --redctn "pca" --integrtd_pc30 "no" --elbo_nm "msc_filt_no_dblts_elbo.RDS" --findpc_mthd "perpendicular line" --resume
 
 ```
 
 Read in seurat objects processed in farm
 ```{r, message=F, warning=F, eval=T}
 ##Read BPcells matrices
-all_msc_filt_no_dblts <- list.files("data/processed/", pattern = "all_msc_filt_no_dblts.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
-  set_names(nm = (str_remove_all(.,'data/processed//Pf/|/seu_obj.*'))) %>% 
+all_msc_filt_no_dblts <- list.files("data/processed/Pf", pattern = "msc_filt_no_dblts.RDS$", full.names = T, recursive = T, include.dirs = T) %>% 
+  set_names(nm = (str_remove_all(.,'data/processed/Pf/|/seu_obj.*'))) %>% 
   .[sample_name] %>%
   map(readRDS)
+```
+
+
+```{r}
+imap(all_msc_filt_no_dblts, possibly(~DimPlot(.x, cells.highlight = colnames(.x[,.x@meta.data$StagePrelim == "Unassigned"])) + labs(title = .y)))
+```
+
+
+```{r}
+map(all_msc_filt_no_dblts, ~.x@meta.data %>% filter(StagePrelim == "Unassigned") %>% select(StagePrelim, contains("_lab")))
+```
+
+```{r}
+map(all_msc_filt_no_dblts, ~.x@meta.data %>% filter(str_detect(StagePrelim, "schizont")) %>% select(contains("_lab")))
+```
+
+Remove unassigned and schizonts
+```{r}
+##Remove schizonts and unassigned
+all_msc_qcd_snglt_stgd <- all_msc_filt_no_dblts %>%
+  map(. %>% subset(., subset = str_detect(StagePrelim, "schizont") | StagePrelim == "Unassigned" , invert = TRUE))
+
+## Table of removal of schizonts and unassigned
+map(all_msc_filt_no_dblts, dim) %>% as.data.frame() %>% .[2,] %>% bind_rows(., map(all_msc_qcd_snglt_stgd, dim) %>% as.data.frame() %>% .[2,]) %>% t()
+```
+
+
+```{r}
+saveRDS(all_msc_qcd_snglt_stgd, 'data/processed/Pf/m2_all/all_msc_qcd_snglt_stgd.RDS')
 ```
 
 #### Visualize reclustered QCd cells
 
 ```{r, results='asis', message=FALSE, warning=FALSE}
-list(all_msc_filt_no_dblts, sample_id_lst)  %>% 
-  purrr::pmap(.,~{
-    DimPlot(., reduction = "umap", label = T, pt.size = 0.5)
-
-    VlnPlot(., features = c("nCount_RNA", "nFeature_RNA"), group.by = NULL,idents = NULL, pt.size = 0.01)
-
-  })
-
+imap(all_msc_filt_no_dblts, ~VlnPlot(., features = c("nCount_RNA", "nFeature_RNA"), group.by = c("seurat_clusters"), idents = NULL, pt.size = 0.01) + labs(title = .y))
 ```
 
+```{r, results='asis', message=FALSE, warning=FALSE}
+imap(all_msc_filt_no_dblts, ~VlnPlot(., features = c("nCount_RNA", "nFeature_RNA"), group.by = c("StagePrelimC"), idents = NULL, pt.size = 0.01) + labs(title = .y))
+```
+```{r, results='asis', message=FALSE, warning=FALSE}
+imap(all_msc_filt_no_dblts, ~DimPlot(., reduction = "umap", label = T, pt.size = 0.5, group.by = "StagePrelim") + labs(title = .y) + scale_color_manual(values = sp_fld_colors))
+```
 
 ```{r, results='asis', message=FALSE, warning=FALSE}
 list(all_msc_filt_no_dblts, sample_id_lst)  %>% 
   purrr::pmap(.,~{
     DimPlot(., reduction = "umap", label = T, pt.size = 0.5)
 
-    VlnPlot(., features = c("nCount_RNA", "nFeature_RNA"), group.by = "StagePrelimC",idents = NULL, pt.size = 0.01)
+    # VlnPlot(., features = c("nCount_RNA", "nFeature_RNA"), group.by = "StagePrelimC",idents = NULL, pt.size = 0.01)
 
   })
 
@@ -1614,10 +1724,6 @@ map(all_msc_filt_no_dblts, ~FeaturePlot(., reduction = "umap", features ='percen
 
 ```
 
-
-```{r}
-saveRDS(all_msc_filt_no_dblts, 'data/processed/Pf/all_msc_filt_no_dblts.RDS')
-```
 
 ```{r, results='asis'}
 
